--- a/module_map/src/main/res/layout/map_fragment_main.xml
+++ b/module_map/src/main/res/layout/map_fragment_main.xml
@@ -7,21 +7,10 @@
     tools:context=".ui.activity.fragment.MainFragment">
 
     <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/map_cl"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
-
-        <ImageView
-            android:id="@+id/map_course_back"
-            android:layout_width="10dp"
-            android:layout_height="0dp"
-            android:layout_marginStart="8dp"
-            android:adjustViewBounds="false"
-            android:fitsSystemWindows="false"
-            app:layout_constraintBottom_toBottomOf="@+id/map_et_search"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="@+id/map_et_search"
-            app:srcCompat="@drawable/map_ic_back"
-            tools:ignore="ContentDescription" />
+        android:layout_height="match_parent"
+        android:background="@color/whiteBackground">
 
         <EditText
             android:id="@+id/map_et_search"
@@ -38,30 +27,41 @@
             android:maxEms="250"
             android:maxLength="180"
             android:maxLines="1"
-            android:paddingStart="18dp"
-            android:paddingTop="12dp"
-            android:paddingEnd="18dp"
-            android:paddingBottom="12dp"
+            android:paddingStart="14dp"
+            android:paddingTop="8dp"
+            android:paddingEnd="14dp"
+            android:paddingBottom="8dp"
             android:textColor="@color/transactionCompletionEditViewColor"
             android:textColorHint="@color/transactionCompletionEditViewColor"
             android:textSize="@dimen/map_search_edit_text_size"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toEndOf="@+id/map_course_back"
+            app:layout_constraintStart_toEndOf="@+id/map_iv_back"
             app:layout_constraintTop_toTopOf="parent"
             tools:text="搜索一个地点" />
 
-        <fragment
-            android:id="@+id/map_nav_inner"
-            android:name="androidx.navigation.fragment.NavHostFragment"
+        <ImageView
+            android:id="@+id/map_iv_back"
+            android:layout_width="10dp"
+            android:layout_height="0dp"
+            android:layout_marginStart="16dp"
+            android:adjustViewBounds="false"
+            android:fitsSystemWindows="false"
+            app:layout_constraintBottom_toBottomOf="@+id/map_et_search"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="@+id/map_et_search"
+            app:srcCompat="@drawable/map_ic_back"
+            tools:ignore="ContentDescription" />
+
+        <LinearLayout
+            android:id="@+id/map_ll_inner_fragment"
             android:layout_width="0dp"
             android:layout_height="0dp"
             android:layout_marginTop="8dp"
-            app:defaultNavHost="true"
+            android:orientation="vertical"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/map_et_search"
-            app:navGraph="@navigation/map_nav_graph_inner" />
+            app:layout_constraintTop_toBottomOf="@+id/map_et_search" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </FrameLayout>
