--- a/module_map/src/main/res/layout/map_fragment_search.xml
+++ b/module_map/src/main/res/layout/map_fragment_search.xml
@@ -4,21 +4,23 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.activity.fragment.MapViewFragment">
+    tools:context=".ui.activity.fragment.inner.SearchFragment">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:background="@color/whiteBackground">
 
-        <com.mredrock.cyxbs.discover.map.utils.MapLayout
-            android:id="@+id/map_layout"
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/map_rv_search_result"
             android:layout_width="0dp"
             android:layout_height="0dp"
+            android:layout_marginStart="8dp"
+            android:layout_marginTop="8dp"
+            android:layout_marginEnd="8dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent">
-
-        </com.mredrock.cyxbs.discover.map.utils.MapLayout>
+            app:layout_constraintTop_toTopOf="parent" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 </FrameLayout>
