--- a/module_map/src/main/res/values/dimens.xml
+++ b/module_map/src/main/res/values/dimens.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <dimen name="map_search_edit_text_size">17sp</dimen>
-
+    <dimen name="map_title_text_size">21sp</dimen>
 </resources>
