[fix]修复打开搜索框后bottomsheet的原始高度发生变化bug，bottomsheet弹出高度变为warp_content不再穿出

--- a/module_map/src/main/res/layout/map_fragment_main.xml
+++ b/module_map/src/main/res/layout/map_fragment_main.xml
@@ -43,8 +43,7 @@
                 android:textSize="@dimen/map_search_edit_text_size"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toEndOf="@+id/map_iv_back"
-                app:layout_constraintTop_toTopOf="parent"
-                tools:text="搜索一个地点" />
+                app:layout_constraintTop_toTopOf="parent" />
 
             <ImageView
                 android:id="@+id/map_iv_back"
