--- a/module_map/src/main/res/layout/map_fragment_map_view.xml
+++ b/module_map/src/main/res/layout/map_fragment_map_view.xml
@@ -23,7 +23,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginEnd="8dp"
-                android:background="?selectableItemBackground"
+                android:background="?attr/selectableItemBackgroundBorderless"
                 android:clickable="true"
                 android:gravity="center_horizontal"
                 android:orientation="vertical"
@@ -90,7 +90,7 @@
                 android:layout_width="0dp"
                 android:layout_height="0dp"
                 android:animateLayoutChanges="true"
-                android:fitsSystemWindows="true"
+                android:fitsSystemWindows="false"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
@@ -101,7 +101,7 @@
                 <FrameLayout
                     android:id="@+id/map_bottom_sheet_content"
                     android:layout_width="match_parent"
-                    android:layout_height="500dp"
+                    android:layout_height="wrap_content"
                     app:behavior_peekHeight="120dp"
                     app:layout_behavior="@string/bottom_sheet_behavior">
 
