--- a/module_map/src/main/res/layout/map_fragment_map_view.xml
+++ b/module_map/src/main/res/layout/map_fragment_map_view.xml
@@ -50,22 +50,16 @@
                     android:textSize="11sp" />
             </LinearLayout>
 
-            <HorizontalScrollView
-                android:id="@+id/map_horizontalscrollview"
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/map_rv_symbol_places"
                 android:layout_width="0dp"
                 android:layout_height="0dp"
-                android:layout_marginStart="8dp"
-                android:layout_marginEnd="1dp"
+                android:paddingStart="15dp"
+                android:paddingEnd="1dp"
                 app:layout_constraintBottom_toBottomOf="@+id/map_ll_map_view_my_favorite"
                 app:layout_constraintEnd_toStartOf="@+id/map_ll_map_view_my_favorite"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="@+id/map_ll_map_view_my_favorite">
-
-                <LinearLayout
-                    android:layout_width="wrap_content"
-                    android:layout_height="match_parent"
-                    android:orientation="horizontal" />
-            </HorizontalScrollView>
+                app:layout_constraintTop_toTopOf="@+id/map_ll_map_view_my_favorite"/>
 
             <androidx.constraintlayout.widget.Guideline
                 android:id="@+id/map_gl_map_view"
@@ -74,8 +68,7 @@
                 android:orientation="horizontal"
                 app:layout_constraintGuide_percent="0.08" />
 
-            <com.mredrock.cyxbs.discover.map.component.MapLayout
-                android:id="@+id/map_layout"
+            <androidx.constraintlayout.widget.ConstraintLayout
                 android:layout_width="0dp"
                 android:layout_height="0dp"
                 app:layout_constraintBottom_toBottomOf="@+id/content"
@@ -83,7 +76,41 @@
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="@+id/map_gl_map_view">
 
-            </com.mredrock.cyxbs.discover.map.component.MapLayout>
+                <com.mredrock.cyxbs.discover.map.component.MapLayout
+                    android:id="@+id/map_layout"
+                    android:layout_width="0dp"
+                    android:layout_height="0dp"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent">
+
+                </com.mredrock.cyxbs.discover.map.component.MapLayout>
+
+                <ImageView
+                    android:id="@+id/map_iv_vr"
+                    android:layout_width="36dp"
+                    android:layout_height="36dp"
+                    android:layout_marginStart="15dp"
+                    android:layout_marginTop="30dp"
+                    android:scaleType="centerCrop"
+                    android:src="@drawable/map_ic_vr"
+                    app:layout_constraintLeft_toLeftOf="parent"
+                    app:layout_constraintTop_toTopOf="parent" />
+
+                <ImageView
+                    android:id="@+id/map_iv_compass"
+                    android:layout_width="66dp"
+                    android:layout_height="66dp"
+                    android:layout_marginTop="15dp"
+                    android:layout_marginEnd="15dp"
+                    android:scaleType="centerCrop"
+                    android:src="@drawable/map_ic_compass"
+                    app:layout_constraintRight_toRightOf="parent"
+                    app:layout_constraintTop_toTopOf="parent" />
+
+            </androidx.constraintlayout.widget.ConstraintLayout>
+
 
             <androidx.coordinatorlayout.widget.CoordinatorLayout
                 android:id="@+id/content"
