--- a/module_map/src/main/res/layout/map_fragment_place_detail_container.xml
+++ b/module_map/src/main/res/layout/map_fragment_place_detail_container.xml
@@ -5,7 +5,9 @@
 
     <data>
 
-
+        <variable
+            name="placeDetails"
+            type="com.mredrock.cyxbs.discover.map.bean.PlaceDetails" />
     </data>
 
     <LinearLayout
@@ -66,6 +68,7 @@
                             android:textColor="@color/levelTwoFontColor"
                             android:textSize="22sp"
                             android:textStyle="bold"
+                            android:text="@{placeDetails.placeName}"
                             android:visibility="visible"
                             app:layout_constraintBottom_toTopOf="@id/map_rv_detail_place_attribute"
                             app:layout_constraintStart_toStartOf="parent"
