--- a/module_map/src/main/res/layout/map_fragment_place_detail_container.xml
+++ b/module_map/src/main/res/layout/map_fragment_place_detail_container.xml
@@ -194,6 +194,8 @@
                             android:layout_height="wrap_content"
                             android:layout_marginTop="8dp"
                             android:layout_marginBottom="8dp"
+                            android:paddingTop="5dp"
+                            android:layoutDirection="ltr"
                             app:layout_constraintBottom_toBottomOf="parent"
                             app:layout_constraintEnd_toEndOf="parent"
                             app:layout_constraintStart_toStartOf="parent"
