[feature]添加“我的收藏”的popwindow，修复底部栏高度发生变化不及时更新的问题，修改布局

--- a/lib_common/src/main/res/values/colors.xml
+++ b/lib_common/src/main/res/values/colors.xml
@@ -362,5 +362,9 @@
     <!--    详情页地点标签颜色-->
     <color name="map_text_detail_tag" tools:ignore="ResourceName">#234780</color>
 
+    <!--    喜欢条目文字颜色-->
+    <color name="map_text_favorite_item" tools:ignore="ResourceName">#253E65</color>
+    <!--   喜欢地点弹窗的背景-->
+    <color name="map_pop_up_window_favorite_color" tools:ignore="ResourceName">#FFFFFF</color>
 </resources>
 
