--- a/module_map/src/main/res/layout/map_fragment_map_view.xml
+++ b/module_map/src/main/res/layout/map_fragment_map_view.xml
@@ -130,6 +130,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     app:behavior_peekHeight="120dp"
+                    app:behavior_hideable="true"
                     app:layout_behavior="@string/bottom_sheet_behavior">
 
                 </FrameLayout>
