[feature]添加收藏编辑界面；地点详细界面显示收藏内容；优化

--- a/lib_common/src/main/res/values/colors.xml
+++ b/lib_common/src/main/res/values/colors.xml
@@ -366,5 +366,15 @@
     <color name="map_text_favorite_item" tools:ignore="ResourceName">#253E65</color>
     <!--   喜欢地点弹窗的背景-->
     <color name="map_pop_up_window_favorite_color" tools:ignore="ResourceName">#FFFFFF</color>
+
+    <color name="map_favorite_accept_text_color" tools:ignore="ResourceName">#234780</color>
+    <color name="map_favorite_cancel_text_color" tools:ignore="ResourceName">#778AA9</color>
+    <color name="map_favorite_place_name_text_color" tools:ignore="ResourceName">#15305C</color>
+    <color name="map_favorite_change_color" tools:ignore="ResourceName">#234780</color>
+    <color name="map_favorite_recommend_color" tools:ignore="ResourceName">#778AA9</color>
+    <color name="map_favorite_cancel_favorite_text_color" tools:ignore="ResourceName">#01CAF0
+    </color>
+    <color name="map_detail_place_nickname_color" tools:ignore="ResourceName">#47DAFA</color>
+
 </resources>
 
