--- a/module_map/src/main/res/values/dimens.xml
+++ b/module_map/src/main/res/values/dimens.xml
@@ -2,5 +2,12 @@
 <resources>
     <dimen name="map_search_edit_text_size">17sp</dimen>
     <dimen name="map_title_text_size">21sp</dimen>
-    <dimen name="map_favorite_list_size">15sp</dimen>
+
+
+    <dimen name="map_favorite_list_text_size">15sp</dimen>
+    <dimen name="map_favorite_accept_or_cancel_text_size">16sp</dimen>
+    <dimen name="map_favorite_cancel_favorite_text_size">13sp</dimen>
+    <dimen name="map_favorite_place_name_text_size">23sp</dimen>
+    <dimen name="map_favorite_change_text_size">16sp</dimen>
+    <dimen name="map_favorite_recommend_text_size">16sp</dimen>
 </resources>
