--- a/module_map/src/main/res/layout/map_fragment_place_detail_container.xml
+++ b/module_map/src/main/res/layout/map_fragment_place_detail_container.xml
@@ -80,9 +80,9 @@
                             android:id="@+id/map_rv_detail_place_attribute"
                             android:layout_width="0dp"
                             android:layout_height="wrap_content"
-                            android:layout_marginEnd="64dp"
+                            android:layout_marginEnd="8dp"
                             app:layout_constraintBottom_toBottomOf="parent"
-                            app:layout_constraintEnd_toEndOf="parent"
+                            app:layout_constraintEnd_toStartOf="@+id/map_tv_place_nickname"
                             app:layout_constraintStart_toStartOf="parent"
                             app:layout_constraintTop_toBottomOf="@+id/map_tv_detail_place_name"
                             tools:layout_height="30dp" />
@@ -95,6 +95,18 @@
                             app:layout_constraintEnd_toEndOf="parent"
                             app:layout_constraintTop_toTopOf="parent"
                             app:srcCompat="@drawable/map_ic_favorite" />
+
+                        <TextView
+                            android:id="@+id/map_tv_place_nickname"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:textColor="@color/map_detail_place_nickname_color"
+                            android:textSize="14sp"
+                            android:visibility="visible"
+                            app:layout_constraintBottom_toBottomOf="parent"
+                            app:layout_constraintEnd_toEndOf="parent"
+                            app:layout_constraintTop_toTopOf="parent"
+                            tools:text="我最爱去" />
 
 
                     </androidx.constraintlayout.widget.ConstraintLayout>
