--- a/module_map/src/main/res/layout/map_recycle_item_favorite_list.xml
+++ b/module_map/src/main/res/layout/map_recycle_item_favorite_list.xml
@@ -4,7 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="135dp"
     android:layout_height="wrap_content"
-    android:background="?selectableItemBackground">
+    android:background="?selectableItemBackground"
+    android:clickable="true">
 
     <TextView
         android:id="@+id/map_tv_favorite_list_item_text"
@@ -13,7 +14,7 @@
         android:layout_marginTop="16dp"
         android:layout_marginBottom="16dp"
         android:textColor="@color/map_text_favorite_item"
-        android:textSize="@dimen/map_favorite_list_size"
+        android:textSize="@dimen/map_favorite_list_text_size"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
