--- a/module_map/src/main/res/layout/map_fragment_map_view.xml
+++ b/module_map/src/main/res/layout/map_fragment_map_view.xml
@@ -8,6 +8,7 @@
     </data>
 
     <FrameLayout
+        android:id="@+id/map_root_map_view"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="@color/whiteBackground"
@@ -87,7 +88,7 @@
 
                 </com.mredrock.cyxbs.discover.map.component.MapLayout>
 
-                <ImageView
+                <com.mredrock.cyxbs.discover.map.component.ClickView
                     android:id="@+id/map_iv_vr"
                     android:layout_width="36dp"
                     android:layout_height="36dp"
@@ -98,7 +99,7 @@
                     app:layout_constraintLeft_toLeftOf="parent"
                     app:layout_constraintTop_toTopOf="parent" />
 
-                <ImageView
+                <com.mredrock.cyxbs.discover.map.component.ClickView
                     android:id="@+id/map_iv_compass"
                     android:layout_width="66dp"
                     android:layout_height="66dp"
