--- a/module_map/src/main/res/layout/map_fragment_favorite_edit.xml
+++ b/module_map/src/main/res/layout/map_fragment_favorite_edit.xml
@@ -62,7 +62,7 @@
                 android:textSize="@dimen/map_favorite_change_text_size"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/map_tv_favorite_place_name"
-                tools:text="将该收藏改为" />
+                android:text="将该收藏改为" />
 
             <TextView
                 android:id="@+id/map_tv_favorite_recommend"
@@ -74,7 +74,7 @@
                 android:textSize="@dimen/map_favorite_recommend_text_size"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/map_et_favorite_nickname"
-                tools:text="@string/map_favorite_recommend_text" />
+                android:text="@string/map_favorite_recommend_text" />
 
             <TextView
                 android:id="@+id/map_tv_favorite_cancel"
