--- a/module_map/src/main/res/layout/map_fragment_map_view.xml
+++ b/module_map/src/main/res/layout/map_fragment_map_view.xml
@@ -23,6 +23,7 @@
                 android:id="@+id/map_ll_map_view_my_favorite"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_marginTop="8dp"
                 android:layout_marginEnd="8dp"
                 android:background="?attr/selectableItemBackgroundBorderless"
                 android:clickable="true"
@@ -32,7 +33,6 @@
                 android:paddingTop="4dp"
                 android:paddingEnd="4dp"
                 android:paddingBottom="4dp"
-                app:layout_constraintBottom_toTopOf="@+id/map_gl_map_view"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toTopOf="parent">
 
@@ -55,19 +55,13 @@
                 android:id="@+id/map_rv_symbol_places"
                 android:layout_width="0dp"
                 android:layout_height="0dp"
+                android:layout_marginStart="8dp"
                 android:paddingStart="15dp"
                 android:paddingEnd="1dp"
                 app:layout_constraintBottom_toBottomOf="@+id/map_ll_map_view_my_favorite"
                 app:layout_constraintEnd_toStartOf="@+id/map_ll_map_view_my_favorite"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="@+id/map_ll_map_view_my_favorite"/>
-
-            <androidx.constraintlayout.widget.Guideline
-                android:id="@+id/map_gl_map_view"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:orientation="horizontal"
-                app:layout_constraintGuide_percent="0.08" />
+                app:layout_constraintTop_toTopOf="@+id/map_ll_map_view_my_favorite" />
 
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:layout_width="0dp"
@@ -75,12 +69,13 @@
                 app:layout_constraintBottom_toBottomOf="@+id/content"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="@+id/map_gl_map_view">
+                app:layout_constraintTop_toBottomOf="@+id/map_rv_symbol_places">
 
                 <com.mredrock.cyxbs.discover.map.component.MapLayout
                     android:id="@+id/map_layout"
                     android:layout_width="0dp"
                     android:layout_height="0dp"
+                    android:layout_marginTop="8dp"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
@@ -122,7 +117,7 @@
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="@+id/map_gl_map_view"
+                app:layout_constraintTop_toBottomOf="@+id/map_rv_symbol_places"
                 tools:background="@color/windowBackground"
                 tools:context=".ui.MainActivity">
 
@@ -130,8 +125,8 @@
                     android:id="@+id/map_bottom_sheet_content"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    app:behavior_peekHeight="120dp"
                     app:behavior_hideable="true"
+                    app:behavior_peekHeight="120dp"
                     app:layout_behavior="@string/bottom_sheet_behavior">
 
                 </FrameLayout>
