--- a/module_map/src/main/res/layout/map_fragment_place_detail_container.xml
+++ b/module_map/src/main/res/layout/map_fragment_place_detail_container.xml
@@ -42,7 +42,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:minHeight="56dp"
-                    android:paddingTop="15dp"
+                    android:paddingTop="18dp"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/course_tip">
@@ -60,6 +60,7 @@
                             android:id="@+id/map_tv_detail_place_name"
                             android:layout_width="300dp"
                             android:layout_height="wrap_content"
+                            android:layout_marginTop="8dp"
                             android:ellipsize="marquee"
                             android:focusable="true"
                             android:marqueeRepeatLimit="-1"
@@ -68,7 +69,7 @@
                             android:singleLine="true"
                             android:text="@{placeDetails.placeName}"
                             android:textColor="@color/levelTwoFontColor"
-                            android:textSize="22sp"
+                            android:textSize="@dimen/map_place_detail_place_name_text_size"
                             android:textStyle="bold"
                             android:visibility="visible"
                             app:layout_constraintBottom_toTopOf="@id/map_rv_detail_place_attribute"
@@ -80,6 +81,7 @@
                             android:id="@+id/map_rv_detail_place_attribute"
                             android:layout_width="0dp"
                             android:layout_height="wrap_content"
+                            android:layout_marginTop="8dp"
                             android:layout_marginEnd="24dp"
                             app:layout_constraintBottom_toBottomOf="parent"
                             app:layout_constraintEnd_toStartOf="@+id/map_tv_detail_place_nickname"
@@ -93,19 +95,19 @@
                             android:layout_height="wrap_content"
                             app:layout_constraintBottom_toBottomOf="@+id/map_rv_detail_place_attribute"
                             app:layout_constraintEnd_toEndOf="parent"
-                            app:layout_constraintTop_toTopOf="@+id/map_rv_detail_place_attribute"
+                            app:layout_constraintTop_toTopOf="@+id/map_tv_detail_place_name"
                             app:srcCompat="@drawable/map_ic_favorite" />
 
                         <TextView
                             android:id="@+id/map_tv_detail_place_nickname"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:textColor="@color/map_detail_place_nickname_color"
+                            android:textColor="@color/map_detail_place_nickname_text_color"
                             android:textSize="14sp"
                             android:visibility="visible"
                             app:layout_constraintBottom_toBottomOf="@+id/map_rv_detail_place_attribute"
                             app:layout_constraintEnd_toEndOf="parent"
-                            app:layout_constraintTop_toTopOf="@+id/map_rv_detail_place_attribute"
+                            app:layout_constraintTop_toTopOf="@+id/map_tv_detail_place_name"
                             tools:text="我最爱去" />
 
 
@@ -136,7 +138,7 @@
                             android:id="@+id/map_tv_detail_share"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:layout_marginTop="8dp"
+                            android:layout_marginTop="16dp"
                             android:text="@string/map_place_detail_upload"
                             android:textColor="@color/map_text_detail_upload"
                             android:textSize="13sp"
@@ -147,7 +149,9 @@
                             android:id="@+id/map_tv_detail_detail_text"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
+                            android:layout_marginTop="8dp"
                             android:text="@string/map_place_detail_detail"
+                            android:textColor="@color/map_detail_place_more_text_color"
                             android:textSize="15sp"
                             app:layout_constraintStart_toStartOf="parent"
                             app:layout_constraintTop_toTopOf="parent" />
@@ -156,8 +160,9 @@
                             android:id="@+id/map_tv_detail_about_text"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:layout_marginTop="8dp"
+                            android:layout_marginTop="32dp"
                             android:text="@string/map_place_detail_about"
+                            android:textColor="@color/map_detail_place_more_text_color"
                             android:textSize="15sp"
                             app:layout_constraintStart_toStartOf="parent"
                             app:layout_constraintTop_toBottomOf="@+id/map_tv_detail_share" />
@@ -186,7 +191,7 @@
                             android:id="@+id/map_banner_detail_image"
                             android:layout_width="0dp"
                             android:layout_height="200dp"
-                            android:layout_marginTop="8dp"
+                            android:layout_marginTop="19dp"
                             app:layout_constraintEnd_toEndOf="parent"
                             app:layout_constraintStart_toStartOf="parent"
                             app:layout_constraintTop_toBottomOf="@+id/map_tv_detail_detail_text" />
@@ -205,10 +210,10 @@
                             android:id="@+id/map_rv_detail_about_list"
                             android:layout_width="0dp"
                             android:layout_height="wrap_content"
-                            android:layout_marginTop="8dp"
+                            android:layout_marginTop="16dp"
                             android:layout_marginBottom="8dp"
-                            android:paddingTop="5dp"
                             android:layoutDirection="ltr"
+                            android:paddingTop="5dp"
                             app:layout_constraintBottom_toBottomOf="parent"
                             app:layout_constraintEnd_toEndOf="parent"
                             app:layout_constraintStart_toStartOf="parent"
