[feature]搜索功能，搜索动画；之前的fragment全部改用childfragmentmanager，第二层fragment嵌套会出问题（自动被回收）解决

--- a/lib_common/src/main/res/values/colors.xml
+++ b/lib_common/src/main/res/values/colors.xml
@@ -383,5 +383,8 @@
     <color name="map_search_clear_text_color" tools:ignore="ResourceName">#ABBCD8</color>
     <color name="map_search_background_color" tools:ignore="ResourceName">#FFFFFF</color>
 
+
+    <color name="map_search_result_item_text_color" tools:ignore="ResourceName">#234780</color>
+
 </resources>
 
