--- a/module_map/src/main/res/drawable/map_ic_back.xml
+++ b/module_map/src/main/res/drawable/map_ic_back.xml
@@ -1,13 +1,14 @@
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
-    android:width="5.461dp"
-    android:height="11.528dp"
-    android:viewportWidth="5.461"
-    android:viewportHeight="11.528">
+    android:width="15dp"
+    android:height="29dp"
+    android:viewportWidth="15"
+    android:viewportHeight="29">
   <path
-      android:strokeWidth="1"
-      android:pathData="M4.756,0.705 L0.504,5.658 4.756,10.823"
-      android:strokeLineJoin="round"
-      android:fillColor="@color/transparentBackground"
-      android:strokeColor="@color/levelTwoFontColor"
-      android:strokeLineCap="round"/>
+      android:pathData="M3.6899,13.9001l10.38,11.6a2.012,2.012 0,1 1,-2.98 2.67l-10.38,-11.6A2.012,2.012 0,1 1,3.6899 13.9001Z"
+      android:fillColor="#0e2a53"
+      android:fillType="evenOdd"/>
+  <path
+      android:pathData="M11.2798,0.8101l-10.66,11.67a2.1,2.1 0,0 0,0 3.01,2.218 2.218,0 0,0 3.06,-0.32l10.67,-11.68a2.11,2.11 0,0 0,-0.01 -3.01A2.219,2.219 0,0 0,11.2798 0.8101Z"
+      android:fillColor="#0e2a53"
+      android:fillType="evenOdd"/>
 </vector>
