--- a/module_map/src/main/res/drawable/map_shape_symbol_select.xml
+++ b/module_map/src/main/res/drawable/map_shape_symbol_select.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
-<stroke
+<solid
     android:width="1dp"
-    android:color="@color/map_text_symbol"/>
+    android:color="@color/map_symbol_select"/>
     <corners android:radius="200dp"/>
 </shape>
