--- a/lib_common/src/main/res/values/colors.xml
+++ b/lib_common/src/main/res/values/colors.xml
@@ -391,5 +391,10 @@
 
     <color name="map_search_result_item_text_color" tools:ignore="ResourceName">#234780</color>
 
+    <color name="map_all_picture_text" tools:ignore="ResourceName">#16315C</color>
+    <color name="map_all_picture_background" tools:ignore="ResourceName">#FFFFFF</color>
+    <color name="map_all_picture_text_share" tools:ignore="ResourceName">#02CAF0</color>
+    <color name="map_all_picture_text_no_more" tools:ignore="ResourceName">#ABBCD8</color>
+
 </resources>
 
