--- a/module_map/src/main/res/layout/map_recycle_item_favorite_list.xml
+++ b/module_map/src/main/res/layout/map_recycle_item_favorite_list.xml
@@ -27,7 +27,7 @@
         android:layout_height="1dp"
         android:layout_marginStart="16dp"
         android:layout_marginEnd="16dp"
-        android:background="@android:color/darker_gray"
+        android:background="@color/map_divider_color"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
