--- a/module_map/src/main/res/layout/map_fragment_map_view.xml
+++ b/module_map/src/main/res/layout/map_fragment_map_view.xml
@@ -12,7 +12,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="@color/whiteBackground"
-        tools:context=".ui.activity.fragment.inner.MapViewFragment">
+        tools:context=".ui.inner.MapViewFragment">
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:id="@+id/map_cl_map_view"
@@ -78,8 +78,10 @@
                     android:layout_marginTop="8dp"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintHorizontal_bias="0.0"
                     app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toTopOf="parent">
+                    app:layout_constraintTop_toTopOf="parent"
+                    app:layout_constraintVertical_bias="0.0">
 
                 </com.mredrock.cyxbs.discover.map.component.MapLayout>
 
