--- a/module_map/src/main/res/layout/map_fragment_place_detail_container.xml
+++ b/module_map/src/main/res/layout/map_fragment_place_detail_container.xml
@@ -15,7 +15,6 @@
         android:layout_height="match_parent"
         android:background="@drawable/map_layer_list_detail_container_background"
         android:orientation="vertical"
-
         android:paddingTop="15dp">
 
         <FrameLayout
@@ -35,6 +34,7 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
+                android:clipChildren="false"
                 android:orientation="vertical">
 
                 <FrameLayout
@@ -119,6 +119,7 @@
                     android:id="@+id/map_fl_body"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:clipChildren="false"
                     android:minHeight="56dp"
                     android:paddingTop="10dp"
                     app:layout_constraintEnd_toEndOf="parent"
@@ -129,6 +130,7 @@
                         android:id="@+id/map_cl_body_container"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
+                        android:clipChildren="false"
                         android:minHeight="56dp"
                         android:paddingStart="16dp"
                         android:paddingTop="8dp"
@@ -152,7 +154,7 @@
                             android:layout_marginTop="8dp"
                             android:text="@string/map_place_detail_detail"
                             android:textColor="@color/map_detail_place_more_text_color"
-                            android:textSize="15sp"
+                            android:textSize="17sp"
                             app:layout_constraintStart_toStartOf="parent"
                             app:layout_constraintTop_toTopOf="parent" />
 
@@ -175,8 +177,9 @@
                             android:text="@string/map_place_detail_more"
                             android:textColor="@color/map_text_detail_more_color"
                             android:textSize="12sp"
-                            app:layout_constraintEnd_toStartOf="@+id/map_iv_detail_more"
-                            app:layout_constraintTop_toTopOf="parent" />
+                            app:layout_constraintBottom_toBottomOf="@id/map_tv_detail_detail_text"
+                            app:layout_constraintEnd_toEndOf="parent"
+                            app:layout_constraintTop_toTopOf="@id/map_tv_detail_detail_text" />
 
                         <ImageView
                             android:id="@+id/map_iv_detail_more"
@@ -187,14 +190,28 @@
                             app:layout_constraintTop_toTopOf="@+id/map_tv_detail_more"
                             app:srcCompat="@drawable/map_ic_detail_more" />
 
-                        <com.to.aboomy.pager2banner.Banner
+                        <com.mredrock.cyxbs.discover.map.component.BannerView
                             android:id="@+id/map_banner_detail_image"
-                            android:layout_width="0dp"
+                            android:layout_width="match_parent"
                             android:layout_height="200dp"
+                            android:layout_marginLeft="20dp"
                             android:layout_marginTop="19dp"
+                            android:layout_marginRight="20dp"
+                            android:clipChildren="false"
+                            android:overScrollMode="never"
                             app:layout_constraintEnd_toEndOf="parent"
                             app:layout_constraintStart_toStartOf="parent"
                             app:layout_constraintTop_toBottomOf="@+id/map_tv_detail_detail_text" />
+
+                        <com.mredrock.cyxbs.discover.map.component.BannerIndicator
+                            android:id="@+id/map_indicator_detail"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_gravity="center_horizontal|bottom"
+                            android:layout_margin="10dp"
+                            app:layout_constraintBottom_toBottomOf="@id/map_banner_detail_image"
+                            app:layout_constraintLeft_toLeftOf="parent"
+                            app:layout_constraintRight_toRightOf="parent" />
 
                         <ImageView
                             android:id="@+id/map_iv_detail_share"
