--- a/module_map/src/main/res/layout/map_fragment_all_picture.xml
+++ b/module_map/src/main/res/layout/map_fragment_all_picture.xml
@@ -55,12 +55,13 @@
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/map_rv_all_picture"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="0dp"
         android:layout_marginTop="20dp"
         android:paddingLeft="15dp"
         android:paddingRight="15dp"
         app:layout_constraintTop_toBottomOf="@id/map_tv_all_picture_all"
         app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintBottom_toTopOf="@id/map_tv_all_picture"
         app:layout_constraintRight_toRightOf="parent"/>
 
     <TextView
@@ -72,7 +73,8 @@
         android:textColor="@color/map_all_picture_text_no_more"
         android:textSize="12sp"
         android:layout_marginTop="30dp"
-        app:layout_constraintTop_toBottomOf="@id/map_rv_all_picture"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_marginBottom="15dp"
         app:layout_constraintEnd_toEndOf="@id/map_rv_all_picture"
         />
 </androidx.constraintlayout.widget.ConstraintLayout>
