[feature]增加锁定功能

--- a/module_map/src/main/res/layout/map_fragment_map_view.xml
+++ b/module_map/src/main/res/layout/map_fragment_map_view.xml
@@ -107,6 +107,17 @@
                     app:layout_constraintRight_toRightOf="parent"
                     app:layout_constraintTop_toTopOf="parent" />
 
+                <com.mredrock.cyxbs.discover.map.component.ClickView
+                    android:id="@+id/map_iv_lock"
+                    android:layout_width="36dp"
+                    android:layout_height="36dp"
+                    android:layout_marginTop="20dp"
+                    android:scaleType="centerCrop"
+                    android:src="@drawable/map_ic_unlock"
+                   app:layout_constraintEnd_toEndOf="@id/map_iv_compass"
+                    app:layout_constraintStart_toStartOf="@id/map_iv_compass"
+                    app:layout_constraintTop_toBottomOf="@id/map_iv_compass" />
+
             </androidx.constraintlayout.widget.ConstraintLayout>
 
 
