[feature]点击查看大图，长按保存

--- a/module_map/src/main/res/layout/map_fragment_main.xml
+++ b/module_map/src/main/res/layout/map_fragment_main.xml
@@ -10,7 +10,7 @@
     <FrameLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context=".ui.MainFragment">
+        tools:context=".ui.fragment.MainFragment">
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:id="@+id/map_cl"
