--- a/module_map/src/main/res/layout/map_fragment_search.xml
+++ b/module_map/src/main/res/layout/map_fragment_search.xml
@@ -13,5 +13,5 @@
         android:layout_height="match_parent"
         android:clickable="true"
         android:focusable="true"
-        tools:context=".ui.inner.SearchFragment" />
+        tools:context=".ui.fragment.inner.SearchFragment" />
 </layout>
