--- a/module_map/src/main/res/layout/map_fragment_all_picture.xml
+++ b/module_map/src/main/res/layout/map_fragment_all_picture.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/map_root_all_picture"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/map_all_picture_background">
@@ -59,22 +60,21 @@
         android:layout_marginTop="20dp"
         android:paddingLeft="15dp"
         android:paddingRight="15dp"
-        app:layout_constraintTop_toBottomOf="@id/map_tv_all_picture_all"
-        app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintBottom_toTopOf="@id/map_tv_all_picture"
-        app:layout_constraintRight_toRightOf="parent"/>
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/map_tv_all_picture_all" />
 
     <TextView
         android:id="@+id/map_tv_all_picture"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="30dp"
         android:layout_marginEnd="15dp"
+        android:layout_marginBottom="15dp"
         android:text="@string/map_all_picture_text_no_more"
         android:textColor="@color/map_all_picture_text_no_more"
         android:textSize="12sp"
-        android:layout_marginTop="30dp"
         app:layout_constraintBottom_toBottomOf="parent"
-        android:layout_marginBottom="15dp"
-        app:layout_constraintEnd_toEndOf="@id/map_rv_all_picture"
-        />
+        app:layout_constraintEnd_toEndOf="@id/map_rv_all_picture" />
 </androidx.constraintlayout.widget.ConstraintLayout>
