--- a/module_map/src/main/res/layout/map_fragment_map_view.xml
+++ b/module_map/src/main/res/layout/map_fragment_map_view.xml
@@ -12,7 +12,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="@color/whiteBackground"
-        tools:context=".ui.inner.MapViewFragment">
+        tools:context=".ui.fragment.inner.MapViewFragment">
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:id="@+id/map_cl_map_view"
