--- a/module_map/src/main/res/layout/map_fragment_place_detail_container.xml
+++ b/module_map/src/main/res/layout/map_fragment_place_detail_container.xml
@@ -91,22 +91,23 @@
 
                         <ImageView
                             android:id="@+id/map_iv_detail_favorite"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
+                            android:layout_width="20dp"
+                            android:layout_height="20dp"
                             app:layout_constraintBottom_toBottomOf="@+id/map_rv_detail_place_attribute"
                             app:layout_constraintEnd_toEndOf="parent"
                             app:layout_constraintTop_toTopOf="@+id/map_tv_detail_place_name"
-                            app:srcCompat="@drawable/map_ic_favorite" />
+                            app:srcCompat="@drawable/map_ic_no_like" />
 
                         <TextView
                             android:id="@+id/map_tv_detail_place_nickname"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
+                            android:layout_marginEnd="5dp"
                             android:textColor="@color/map_detail_place_nickname_text_color"
                             android:textSize="14sp"
                             android:visibility="visible"
                             app:layout_constraintBottom_toBottomOf="@+id/map_rv_detail_place_attribute"
-                            app:layout_constraintEnd_toEndOf="parent"
+                            app:layout_constraintEnd_toStartOf="@id/map_iv_detail_favorite"
                             app:layout_constraintTop_toTopOf="@+id/map_tv_detail_place_name"
                             tools:text="我最爱去" />
 
